...
      backgroundColor: Colors.white,
      appBar: _buildAppBar(context),
      bottomNavigationBar: SafeArea(
        child: Padding(
          padding: const EdgeInsets.all(20.0),
          child: ElevatedButton(
            key: const Key('btn_add_to_cart_detail'),
            onPressed: isOutOfStock
                ? null
                : () {
                    int qtyInCart = 0;
                    try {
                      final existingItem = _cartController.items.firstWhere(
...
    return AppBar(
      backgroundColor: Colors.white,
      elevation: 0,
      automaticallyImplyLeading: false,
      titleSpacing: 24,
      title: const Text(
        'Detail Produk',
        style: TextStyle(
          color: Colors.black,
          fontSize: 18,
          fontWeight: FontWeight.bold,
        ),
      ),
...
          builder: (context, child) {
            int cartItemCount = _cartController.items.length;
            return Stack(
              alignment: Alignment.center,
              children: [
                IconButton(
                  key: const Key('btn_cart_appbar'),
                  icon: const Icon(
                    Icons.shopping_cart_outlined,
                    color: Colors.black87,
                    size: 24,
                  ),
                  onPressed: () {
...
